# third-term_paper

./: README.md  main.py  pyproject.toml
data/: for_test_six_operations.json  operations.py  result_last_5_operations.txt
tests/: test_load_operations.py  test_masks_funcs.py  test_methods_class_operation.py  test_operations_on_accounts.py
utils/: data_operations.py  load_json_util.py  operations_on_accounts.py  utils.py  utils_mask.py
